--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "rollup": "^1.26.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-svelte": "^5.1.1",
     "rollup-plugin-vue": "4",
     "sirv-cli": "^0.4.5",
+    "svelte": "^3.12.1",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
   }
